<?xml version="1.0"?>
<package format="2">

  <name>psm_dyn</name>
  <version>0.0.0</version>
  <description>The psm_dyn package</description>

  <author email="emmanuel@wpi.edu">Emmanuel</author>
  <maintainer email="emmanuel@todo.todo">emmanuel</maintainer>
  <license>TODO</license>
  <url type="website">http://wiki.ros.org/beginner_tutorials</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
